--- a/.i3/config
+++ b/.i3/config
@@ -104,7 +104,7 @@ bindsym $mod+Shift+asciicircum move container to workspace 6
 bindsym $mod+Shift+ampersand move container to workspace 7
 bindsym $mod+Shift+asterisk move container to workspace 8
 bindsym $mod+Shift+parenleft move container to workspace 9
-bindsym $mod+Shift+parenright move container to workspace 10
+bindsym $mod+Shift+parenright move container to workspace 10: Daemons
 
 # reload the configuration file
 bindsym $mod+Shift+C reload
