--- a/.i3/config
+++ b/.i3/config
@@ -8,6 +8,8 @@ set $blue #005588
 set $gray1 #9933CC
 set $gray2 #AA66CC
 
+set $browser firefox
+
 client.focused            $gray1   $gray1   #FFFFFF   #333333
 client.focused_inactive   $gray2   $gray2   #FFFFFF   #000000
 client.unfocused          $gray2   $gray2   #FFFFFF   #000000
@@ -18,6 +20,8 @@ floating_modifier $mod
 # start a terminal
 bindsym $mod+Return exec gnome-terminal
 bindsym XF86Explorer exec gnome-terminal
+bindsym $mod+Shift+Return exec urxvt
+bindsym Print exec scrot -e 'mv $f /home/matthew/Pictures/Screenshots'
 
 # sound shortcuts
 bindsym XF86AudioPlay exec cmus-remote -u
@@ -30,11 +34,11 @@ bindsym XF86AudioLowerVolume exec amixer set Master 3- unmute
 bindsym XF86AudioMute exec amixer set Master mute
 
 # lock scren
-bindsym XF86Calculator exec i3lock
+bindsym XF86Calculator exec i3lock -c 1C1C1C
 
-# start chromium
-bindsym $mod+c exec chromium
-bindsym XF86HomePage exec chromium
+# start browser
+bindsym $mod+c exec $browser
+bindsym XF86HomePage exec $browser
 
 # kill focused window
 bindsym $mod+Shift+Q kill
@@ -80,7 +84,6 @@ bindsym $mod+m layout toggle split
 bindsym $mod+Shift+f floating toggle
 
 # change focus between tiling / floating windows
-bindsym $mod+space focus mode_toggle
 
 # switch to workspace
 bindsym $mod+1 workspace 1
@@ -154,3 +157,7 @@ exec /usr/lib/gnome-settings-daemon/gnome-settings-daemon
 exec --no-startup-id /bin/sh ~/.fehbg
 exec gnome-keyring-daemon
 exec dropboxd
+
+for_window [title="synapse"] border none
+
+
