Updated scrot's directory. Previously, my screenshots wouldn't be moved to ~/Pictures/Screenshots because the directory Screenshots didn't exist. I changed the directory to ~/Pictures.

--- a/.i3/config
+++ b/.i3/config
@@ -21,7 +21,7 @@ floating_modifier $mod
 bindsym $mod+Return exec gnome-terminal
 bindsym XF86Explorer exec gnome-terminal
 bindsym $mod+Shift+Return exec urxvt
-bindsym Print exec scrot -q 100 -e 'mv $f ~/Pictures/Screenshots'
+bindsym Print exec scrot -q 100 -e 'mv $f ~/Pictures'
 
 # sound shortcuts
 bindsym XF86AudioPlay exec ~/.scripts/audiocontrols.sh play
