I'm starting to administrate multiple servers over SSH, so added an SSH tab.

--- a/.i3/config
+++ b/.i3/config
@@ -93,7 +93,7 @@ bindsym $mod+4 workspace 4
 bindsym $mod+5 workspace 5
 bindsym $mod+6 workspace 6
 bindsym $mod+7 workspace 7
-bindsym $mod+8 workspace 8
+bindsym $mod+8 workspace 8: SSH
 bindsym $mod+9 workspace 9: Music+etc
 bindsym $mod+0 workspace 10: IRC+Chat
 
@@ -105,7 +105,7 @@ bindsym $mod+Shift+dollar move container to workspace 4
 bindsym $mod+Shift+percent move container to workspace 5
 bindsym $mod+Shift+asciicircum move container to workspace 6
 bindsym $mod+Shift+ampersand move container to workspace 7
-bindsym $mod+Shift+asterisk move container to workspace 8
+bindsym $mod+Shift+asterisk move container to workspace 8: SSH
 bindsym $mod+Shift+parenleft move container to workspace 9: Music+etc
 bindsym $mod+Shift+parenright move container to workspace 10: IRC+Chat
 bindsym $mod+Shift+underscore move container to workspace 11: Daemons
