--- a/.i3/config
+++ b/.i3/config
@@ -1,65 +1,47 @@
+
 set $mod Mod4
 
-font xft:Terminus 9.5
-new_window pixel 2
-focus_follows_mouse  yes
+font pango:Consolas 9
 
-set $blue #005588
-set $gray1 #4F305E
-set $gray2 #333333
-
-set $browser firefox
-
-client.focused            $gray1   $gray1   #FFFFFF   #333333
-client.focused_inactive   $gray2   $gray2   #FFFFFF   #000000
-client.unfocused          $gray2   $gray2   #FFFFFF   #000000
-
-# use Mouse+$mod to drag floating windows to their wanted position
+# Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
-# start a terminal
-bindsym $mod+Return exec mate-terminal
-bindsym XF86Explorer exec gnome-terminal
-bindsym $mod+Shift+Return exec urxvt
-bindsym Print exec scrot -q 100 -e 'mv $f ~/Pictures'
+bindsym $mod+Return exec i3-sensible-terminal
 
-# sound shortcuts
-bindsym XF86AudioPlay exec ~/.scripts/audiocontrols.sh play
-bindsym XF86AudioStop exec ~/.scripts/audiocontrols.sh stop 
-bindsym XF86AudioNext exec ~/.scripts/audiocontrols.sh next
-bindsym XF86AudioPrev exec ~/.scripts/audiocontrols.sh stop
-bindsym XF86Tools exec gnome-terminal -x sh -c "cmus"
-bindsym XF86AudioRaiseVolume exec amixer set Master 3+ unmute
-bindsym XF86AudioLowerVolume exec amixer set Master 3- unmute
-bindsym XF86AudioMute exec amixer set Master mute
-
-# lock screen using cinnamon's screen lock
-bindsym XF86Calculator exec cinnamon-screensaver-command -l
-
-# start browser
-bindsym $mod+c exec $browser
-bindsym XF86HomePage exec $browser
+bindsym XF86AudioLowerVolume exec amixer -q set Master 5-
+bindsym XF86AudioRaiseVolume exec amixer -q set Master 5+
+bindsym XF86AudioMute        exec $(amixer get Master | grep off > /dev/null && amixer -q set Master unmute) || amixer -q set Master mute
+bindsym XF86MonBrightnessDown  exec xbacklight -dec 10
+bindsym XF86MonBrightnessUp  exec xbacklight -inc 10
+bindsym Print                exec scrot
 
 # kill focused window
-bindsym $mod+Shift+Q kill
+bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run -nb black -nf white
-
-# screen lock
-bindsym Control+$mod+l exec slimlock
+bindsym $mod+d exec dmenu_run
+# There also is the (new) i3-dmenu-desktop which only displays applications
+# shipping a .desktop file. It is a wrapper around dmenu, so you need that
+# installed.
+#bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 
 # change focus
 bindsym $mod+j focus left
 bindsym $mod+k focus down
-bindsym $mod+l focus up
+#bindsym $mod+Shift+l focus up
 bindsym $mod+semicolon focus right
 
+# alternatively, you can use the cursor keys:
+bindsym $mod+Left focus left
+bindsym $mod+Down focus down
+bindsym $mod+Up focus up
+bindsym $mod+Right focus right
+
 # move focused window
-bindsym $mod+Shift+J move left
-bindsym $mod+Shift+K move down
-bindsym $mod+Shift+L move up
-bindsym $mod+Shift+colon move right
+bindsym $mod+Shift+j move left
+bindsym $mod+Shift+k move down
+bindsym $mod+Shift+l move up
+bindsym $mod+Shift+semicolon move right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
@@ -76,46 +58,54 @@ bindsym $mod+v split v
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen
 
-# change container layout (tabbed, toggle split)
-bindsym $mod+n layout tabbed
-bindsym $mod+m layout toggle split
+# change container layout (stacked, tabbed, toggle split)
+bindsym $mod+s layout stacking
+bindsym $mod+w layout tabbed
+bindsym $mod+e layout toggle split
 
 # toggle tiling / floating
-bindsym $mod+Shift+f floating toggle
+bindsym $mod+Shift+space floating toggle
 
 # change focus between tiling / floating windows
+bindsym $mod+space focus mode_toggle
+
+# focus the parent container
+bindsym $mod+a focus parent
+
+# focus the child container
+#bindsym $mod+d focus child
 
 # switch to workspace
-bindsym $mod+1 workspace 1: Home
+bindsym $mod+1 workspace 1
 bindsym $mod+2 workspace 2
 bindsym $mod+3 workspace 3
 bindsym $mod+4 workspace 4
 bindsym $mod+5 workspace 5
 bindsym $mod+6 workspace 6
 bindsym $mod+7 workspace 7
-bindsym $mod+8 workspace 8: SSH
-bindsym $mod+9 workspace 9: Music+etc
-bindsym $mod+0 workspace 10: IRC+Chat
+bindsym $mod+8 workspace 8
+bindsym $mod+9 workspace 9
+bindsym $mod+0 workspace 10
 
 # move focused container to workspace
-bindsym $mod+Shift+exclam move container to workspace 1: Home
-bindsym $mod+Shift+quotedbl move container to workspace 2
-bindsym $mod+Shift+sterling move container to workspace 3
-bindsym $mod+Shift+dollar move container to workspace 4
-bindsym $mod+Shift+percent move container to workspace 5
-bindsym $mod+Shift+asciicircum move container to workspace 6
-bindsym $mod+Shift+ampersand move container to workspace 7
-bindsym $mod+Shift+asterisk move container to workspace 8: SSH
-bindsym $mod+Shift+parenleft move container to workspace 9: Music+etc
-bindsym $mod+Shift+parenright move container to workspace 10: IRC+Chat
-bindsym $mod+Shift+underscore move container to workspace 11: Daemons
+bindsym $mod+Shift+1 move container to workspace 1
+bindsym $mod+Shift+2 move container to workspace 2
+bindsym $mod+Shift+3 move container to workspace 3
+bindsym $mod+Shift+4 move container to workspace 4
+bindsym $mod+Shift+5 move container to workspace 5
+bindsym $mod+Shift+6 move container to workspace 6
+bindsym $mod+Shift+7 move container to workspace 7
+bindsym $mod+Shift+8 move container to workspace 8
+bindsym $mod+Shift+9 move container to workspace 9
+bindsym $mod+Shift+0 move container to workspace 10
 
 # reload the configuration file
-bindsym $mod+Shift+C reload
+bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym $mod+Shift+R restart
+bindsym $mod+Shift+r restart
+bindsym $mod+l exec "i3exit lock"
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+E exit
+bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -131,10 +121,10 @@ mode "resize" {
         bindsym semicolon resize grow width 10 px or 10 ppt
 
         # same bindings, but for the arrow keys
-        bindsym 113 resize shrink width 10 px or 10 ppt
-        bindsym 116 resize grow height 10 px or 10 ppt
-        bindsym 111 resize shrink height 10 px or 10 ppt
-        bindsym 114 resize grow width 10 px or 10 ppt
+        bindsym Left resize shrink width 10 px or 10 ppt
+        bindsym Down resize grow height 10 px or 10 ppt
+        bindsym Up resize shrink height 10 px or 10 ppt
+        bindsym Right resize grow width 10 px or 10 ppt
 
         # back to normal: Enter or Escape
         bindsym Return mode "default"
@@ -143,21 +133,31 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+# Start i3bar to display a workspace bar (p
 bar {
-        position top
-        status_command ~/.i3/conky
-        colors { 
-                statusline #AAAAAA
-                background #333333
-                focused_workspace #333333 #333333 #FFFFFF
-                inactive_workspace #484848 #484848 #AAAAAA
-        }
+status_command ~/.i3/conky-i3bar
+#    status_command    i3status
+    position          bottom
+    workspace_buttons yes
+    tray_output       yes
+    font pango:Consolas 9
+#    font -Consolas--13-120-75-75-C-70--1
+ colors {
+    separator #666666
+    background #222222
+    statusline #dddddd
+    focused_workspace #0088CC #0088CC #ffffff
+    active_workspace #333333 #333333 #ffffff
+    inactive_workspace #333333 #333333 #888888
+    urgent_workspace #2f343a #900000 #ffffff
+  }
 }
 
-exec /usr/lib/gnome-settings-daemon/gnome-settings-daemon
-exec --no-startup-id /bin/sh ~/.fehbg
-exec gnome-keyring-daemon
-exec dropbox start
+for_window [window_role="pop-up"] floating enable
+for_window [window_role="task_dialog"] floating enable
 
-for_window [title="synapse"] border none
-for_window [class="Audacious"] floating enable
+
+client.focused #0088CC #0088CC #ffffff #dddddd
+client.focused_inactive #333333 #333333 #888888 #292d2e
+client.unfocused #333333 #333333 #888888 #292d2e
+client.urgent #2f343a #900000 #ffffff #900000
