--- a/.i3/config
+++ b/.i3/config
@@ -1,25 +1,26 @@
 
-set $mod Mod4
 
-font pango:Consolas 9
+
+
+set                            $mod Mod4
+font                           pango:Consolas 9
+bindsym $mod+Return            exec i3-sensible-terminal
+
+bindsym XF86AudioLowerVolume   exec amixer -q set Master 5-
+bindsym XF86AudioRaiseVolume   exec amixer -q set Master 5+
+bindsym XF86AudioMute          exec $(amixer get Master | grep off > /dev/null && amixer -q set Master unmute) || amixer -q set Master mute
+bindsym XF86MonBrightnessDown  exec xbacklight -dec 10
+bindsym XF86MonBrightnessUp    exec xbacklight -inc 10
+bindsym Print                  exec scrot
 
 # Use Mouse+$mod to drag floating windows to their wanted position
-floating_modifier $mod
-
-bindsym $mod+Return exec i3-sensible-terminal
-
-bindsym XF86AudioLowerVolume exec amixer -q set Master 5-
-bindsym XF86AudioRaiseVolume exec amixer -q set Master 5+
-bindsym XF86AudioMute        exec $(amixer get Master | grep off > /dev/null && amixer -q set Master unmute) || amixer -q set Master mute
-bindsym XF86MonBrightnessDown  exec xbacklight -dec 10
-bindsym XF86MonBrightnessUp  exec xbacklight -inc 10
-bindsym Print                exec scrot
+floating_modifier             $mod
 
 # kill focused window
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+bindsym $mod+r exec dmenu_run
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -110,7 +111,6 @@ bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 # resize window (you can also use the mouse for that)
 mode "resize" {
         # These bindings trigger as soon as you enter the resize mode
-
         # Pressing left will shrink the window’s width.
         # Pressing right will grow the window’s width.
         # Pressing up will shrink the window’s height.
@@ -131,32 +131,29 @@ mode "resize" {
         bindsym Escape mode "default"
 }
 
-bindsym $mod+r mode "resize"
+bindsym $mod+Ctrl+r mode "resize"
 
 # Start i3bar to display a workspace bar (p
 bar {
-status_command ~/.i3/conky-i3bar
-#    status_command    i3status
-    position          bottom
-    workspace_buttons yes
-    tray_output       yes
-    font pango:Consolas 9
-#    font -Consolas--13-120-75-75-C-70--1
- colors {
-    separator #666666
-    background #222222
-    statusline #dddddd
-    focused_workspace #0088CC #0088CC #ffffff
-    active_workspace #333333 #333333 #ffffff
-    inactive_workspace #333333 #333333 #888888
-    urgent_workspace #2f343a #900000 #ffffff
+  status_command         ~/.i3/conky-i3bar
+  position               bottom
+  workspace_buttons      yes
+  tray_output            yes
+  font                   pango:Consolas 9
+  colors {
+    separator            #666666
+    background           #222222
+    statusline           #dddddd
+    focused_workspace    #0088CC #0088CC #ffffff
+    active_workspace     #333333 #333333 #ffffff
+    inactive_workspace   #333333 #333333 #888888
+    urgent_workspace     #2f343a #900000 #ffffff
   }
 }
 
 for_window [window_role="pop-up"] floating enable
 for_window [window_role="task_dialog"] floating enable
-
-
+# ArchLinux colors
 client.focused #0088CC #0088CC #ffffff #dddddd
 client.focused_inactive #333333 #333333 #888888 #292d2e
 client.unfocused #333333 #333333 #888888 #292d2e
