--- a/.i3/config
+++ b/.i3/config
@@ -74,27 +74,27 @@ bindsym $mod+a focus parent
 #bindsym $mod+d focus child
 
 # switch to workspace
-bindsym $mod+1 workspace 1
-bindsym $mod+2 workspace 2
-bindsym $mod+3 workspace 3
-bindsym $mod+4 workspace 4
-bindsym $mod+5 workspace 5
-bindsym $mod+6 workspace 6
-bindsym $mod+7 workspace 7 ssh
-bindsym $mod+8 workspace 8 mail
-bindsym $mod+9 workspace 9 music
+bindsym $mod+1 workspace 1 www
+bindsym $mod+2 workspace 2 edit
+bindsym $mod+3 workspace 3 tty
+bindsym $mod+4 workspace 4 ssh
+bindsym $mod+5 workspace 5 expl
+bindsym $mod+6 workspace 6 mail
+bindsym $mod+7 workspace 7 music
+bindsym $mod+8 workspace 8
+bindsym $mod+9 workspace 9 other
 bindsym $mod+0 workspace 10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace 1
-bindsym $mod+Shift+2 move container to workspace 2
-bindsym $mod+Shift+3 move container to workspace 3
-bindsym $mod+Shift+4 move container to workspace 4
-bindsym $mod+Shift+5 move container to workspace 5
-bindsym $mod+Shift+6 move container to workspace 6
-bindsym $mod+Shift+7 move container to workspace 7
+bindsym $mod+Shift+1 move container to workspace 1 www
+bindsym $mod+Shift+2 move container to workspace 2 edit
+bindsym $mod+Shift+3 move container to workspace 3 tty
+bindsym $mod+Shift+4 move container to workspace 4 ssh
+bindsym $mod+Shift+5 move container to workspace 5 expl
+bindsym $mod+Shift+6 move container to workspace 6 mail
+bindsym $mod+Shift+7 move container to workspace 7 music
 bindsym $mod+Shift+8 move container to workspace 8
-bindsym $mod+Shift+9 move container to workspace 9
+bindsym $mod+Shift+9 move container to workspace 9 other
 bindsym $mod+Shift+0 move container to workspace 10
 
 # reload the configuration file
@@ -132,10 +132,10 @@ bindsym $mod+Ctrl+r mode "resize"
 
 # Start i3bar to display a workspace bar (p
 bar {
-  status_command         ~/.i3/conky-i3bar
+status_command         ~/.i3/conky-i3bar
+  strip_workspace_numbers no
   position               bottom
   workspace_buttons      yes
-  tray_output            yes
   font                   pango:Consolas 9
   colors {
     separator            #666666
