--- a/.i3/config
+++ b/.i3/config
@@ -155,3 +155,6 @@ client.focused #0088CC #0088CC #ffffff #dddddd
 client.focused_inactive #333333 #333333 #888888 #292d2e
 client.unfocused #333333 #333333 #888888 #292d2e
 client.urgent #2f343a #900000 #ffffff #900000
+
+exec --no-startup-id xset dpms 300
+exec --no-startup-id xautolock -time 4 -locker "i3lock -c 191919 -t -e" &
