--- a/.config/qnapi.ini
+++ b/.config/qnapi.ini
@@ -1,7 +1,7 @@
 [qnapi]
 7z_path=/usr/bin/7z
 tmp_path=/tmp
-language=pl
+language=PL
 no_backup=false
 use_brushed_metal=false
 engines=@Variant(\0\0\0\v\0\0\0\x2\0\0\0\x16\0N\0\x61\0p\0i\0P\0r\0o\0j\0\x65\0k\0t\0\0\0\x2\0\x31), @Variant(\0\0\0\v\0\0\0\x2\0\0\0\x1a\0O\0p\0\x65\0n\0S\0u\0\x62\0t\0i\0t\0l\0\x65\0s\0\0\0\x2\0\x31)
@@ -13,9 +13,12 @@ auto_detect_encoding=true
 enc_from=windows-1250
 enc_to=UTF-8
 show_all_encodings=false
-remove_lines=false
+remove_lines=true
 remove_words=movie info, "synchro "
 change_permissions=false
 permissions=644
-version=0.1.6
+version=0.1.5
 firstrun=false
+prev_dialog_path=/home/js/Acurrent/todo/mantain_noAction/natalia
+nick=
+pass=
