--- a/.config/qnapi.ini
+++ b/.config/qnapi.ini
@@ -19,6 +19,6 @@ change_permissions=false
 permissions=644
 version=0.1.5
 firstrun=false
-prev_dialog_path=/home/js/Acurrent/todo/mantain_noAction/natalia
+prev_dialog_path=/
 nick=
 pass=
